# server-monitor-agent

./: .gitignore  CONTIBUTING.md  CONTRIBUTING.md  Pipfile  README.md  Vagrantfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml  labeler.yml
.github/workflows/: code-analysis.yml  codeql.yml  labeler.yml  test-package.yml  test.yml
ansible/: ansible.cfg  playbook.yml
ansible/roles/app/tasks/: apt.yml  consul.yml  docker.yml  files.yml  firewall.yml  main.yml  python.yml  time.yml
ansible/roles/app/templates/: consul-services-checks.hcl  docker-compose.yml  docker.list  run-examples.sh  sources.list
ansible/roles/app/vars/: main.yml
docs/: DEVELOP.md
src/server_monitor_agent/: common.py  entry.py
src/server_monitor_agent/agent/: cli.py  command.py  common.py  consul.py  convert.py  instance.py  io.py  model.py  monitor.py  operation.py  register.py  registry.py  service.py  slack.py
src/server_monitor_agent/alert_manager/: model.py  operation.py  send.py
src/server_monitor_agent/cli/: command.py  model.py
src/server_monitor_agent/cmd/: check.py  cli.py  config.py  entry.py  list_entries.py  notify.py
src/server_monitor_agent/consul/: collect.py  io.py  model.py  operation.py
src/server_monitor_agent/core/: cli.py  local.py  manage.py
src/server_monitor_agent/disk/: collect.py  io.py  model.py  operation.py  send.py
src/server_monitor_agent/docker/: collect.py  io.py  model.py  operation.py
src/server_monitor_agent/server/: collect.py  io.py  model.py  operation.py  send.py
src/server_monitor_agent/service/: __init__.py  agent.py  consul.py  device.py  docker.py  email.py  instance.py  slack.py  status_cake.py  systemd.py  web.py
src/server_monitor_agent/service/alert_manager/: io.py  model.py  operation.py  send.py
src/server_monitor_agent/service/consul/: build.py  collect.py  io.py  model.py  operation.py
src/server_monitor_agent/service/disk/: build.py  collect.py  io.py  model.py  operation.py  send.py
src/server_monitor_agent/service/docker/: build.py  collect.py  io.py  model.py  operation.py
src/server_monitor_agent/service/server/: build.py  collect.py  io.py  model.py  operation.py  send.py
src/server_monitor_agent/service/statuscake/: build.py  collect.py  io.py  model.py  operation.py  send.py
src/server_monitor_agent/service/systemd/: build.py  collect.py  io.py  model.py  operation.py
src/server_monitor_agent/service/web/: build.py  collect.py  io.py  model.py  operation.py  send.py
src/server_monitor_agent/statuscake/: collect.py  io.py  model.py  operation.py  send.py
src/server_monitor_agent/systemd/: collect.py  io.py  model.py  operation.py
src/server_monitor_agent/web/: collect.py  io.py  model.py  operation.py
tests/: conftest.py  helpers.py  test_agent.py  test_check.py  test_cli.py  test_cmd_config.py  test_cmd_entry.py  test_consul.py  test_core_manage.py  test_disk.py  test_docker.py  test_entry.py  test_notify.py  test_server.py  test_status_cake.py  test_systemd.py  test_todo.py  test_web.py
tests/data/: completed_process_examples.py  expected_commands.py
tests/resources/: config-fail.yml  config-pass.yml
