[build-system]
requires = ["setuptools>=63.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "server-monitor-agent"
description = "Utility to run checks on a server and send notifications."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Mark Cottman-Fields", email = "mark.cottmanfields@qcif.edu.au" },
]
maintainers = [
    { name = "Mark Cottman-Fields", email = "mark.cottmanfields@qcif.edu.au" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]

[project.urls]
"Homepage" = "https://github.com/qcif/server-monitor-agent"
"Bug Tracker" = "https://github.com/qcif/server-monitor-agent/issues"


[project.scripts]
server-monitor-agent = 'server_monitor_agent.entry:main'

[tool.setuptools.packages.find]
where = ["src"]
include = ["server_monitor_agent*"]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --quiet"
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]

[tool.coverage.run]
# "Specifying the source option enables coverage.py to report on unexecuted files,
# since it can search the source tree for files that haven’t been measured at all."
source = [
    'src'
]
omit = [
    '*/site-packages/*',
    'tests/*',
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.html]
directory = "coverage-html"

[[tool.mypy.overrides]]
module = "colorama.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
#envlist = py37,py38,py39,py310,py311-dev
envlist = py310
toxworkdir = {homedir}/tox-app

[testenv]
recreate = true
deps =
    -rrequirements.txt
    -rrequirements-dev.txt
commands =
    pytest --tb=no --durations=5
    # coverage run -m pytest
    # black --check src
    # flake8 src --count --show-source --statistics
    # pydocstyle src
    # mypy src
    # pylint src
    # pyright src
"""

[[tool.mypy.overrides]]
module = [
    "zoneinfo",
    "boltons"
]
ignore_missing_imports = true


[tool.pydocstyle]
ignore = 'D104'
